[package]
name = "bevy_funk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bevy = "0.13"
bevy_egui = "0.25"
cfg-if = "1.0.0"
crossbeam-queue = "0.3.8"
itertools = "0.10.5"
once_cell = "1.17.1"
thiserror = "1.0.39"
dyn-clone = "1.0.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-audio-api = { version = "0.28.0", default-features = false, features = [
    "cpal",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "HtmlInputElement",
    "HtmlLabelElement",
    "Url",
    "Window",
    "TextDecoder",
] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"

# (hopefully) the best of both worlds from debug and release
[profile.mid]
inherits = "dev"
debug = 1
opt-level = 3
incremental = true
