[package]
name = "sonars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
# bevy_winit render bevy_asset bevy_gilrs bevy_scene wayland x11
bevy = {version = "0.9", default-features = false, features = ["bevy_winit","render", "x11"]}
bevy_egui = "0.19.0"
cfg-if = "1.0.0"
once_cell = "1.17.0"
rhai = {version="1.12.0", features=["f32_float"]}
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-audio-api = {version = "0.28.0", default-features = false, features = ["cpal"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3.61", features=[  
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'AudioBuffer',
    'AudioBufferOptions',
    'AudioBufferSourceNode']}


[features]
dev = ["bevy/dynamic"]

