[package]
name = "sonars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
# bevy_winit render bevy_asset bevy_gilrs bevy_scene wayland x11
bevy = { version = "0.10.0", default-features = false, features = ["bevy_winit","bevy_render", "x11"] }
bevy_egui = {git="https://github.com/mvlabat/bevy_egui"}
cfg-if = "1.0.0"
crossbeam-queue = "0.3.8"
once_cell = "1.17.1"
rhai = { version = "1.12.0", features = ["f32_float", "sync"] }
thiserror = "1.0.39"
wasm-bindgen = "0.2.84"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-audio-api = { version = "0.28.0", default-features = false, features = ["cpal"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.61", features = [  
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'AudioBuffer',
    'AudioBufferOptions',
    'AudioBufferSourceNode',
    'Worklet'] }


[features]
dev = ["bevy/dynamic_linking"]

