[package]
name = "sonars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
# bevy_winit render bevy_asset bevy_gilrs bevy_scene wayland x11
bevy = { version = "0.10.0", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "x11",
] }
bevy_egui = { git = "https://github.com/mvlabat/bevy_egui" }
bevy_funk = { path = "../bevy_funk" }
cfg-if = "1.0.0"
crossbeam-queue = "0.3.8"
itertools = "0.10.5"
once_cell = "1.17.1"
rhai = { version = "1.12.0", features = ["f32_float", "sync"] }
thiserror = "1.0.39"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"


[features]
dev = ["bevy/dynamic_linking"]
