[package]
name = "bevy_funk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
cfg-if = "1.0.0"
crossbeam-queue = "0.3.8"
dyn-clone = "1.0.16"
itertools = "0.10.5"
once_cell = "1.17.1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-audio-api = { version = "0.28.0", default-features = false, features = [
    "cpal",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "HtmlInputElement",
    "HtmlLabelElement",
    "Url",
    "Window",
    "TextDecoder",
] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
